@@ -285,33 +285,6 @@ class StatisticsServiceImplTest {
         Mockito.reset(eventTypeDao);
     }
 
-    private EventTypeStatistics createEventTypeStatistics(List<EventTypeMetrics> eventTypeMetricsList,
-                                                          EventType eventType, LocalDate startDate, LocalDate endDate,
-                                                          long age, long duration, long eventsQuantity, long speakersQuantity,
-                                                          long companiesQuantity, long talksQuantity, long javaChampionsQuantity,
-                                                          long mvpsQuantity) {
-        return new EventTypeStatistics(
-                eventTypeMetricsList,
-                new EventTypeMetrics(
-                        eventType,
-                        age,
-                        eventsQuantity,
-                        new EventTypeEventMetrics(
-                                startDate,
-                                endDate,
-                                duration,
-                                speakersQuantity,
-                                companiesQuantity,
-                                new Metrics(
-                                        talksQuantity,
-                                        javaChampionsQuantity,
-                                        mvpsQuantity
-                                )
-                        )
-                )
-        );
-    }
-
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
     @DisplayName("getStatisticsEventTypes method with parameters tests")
@@ -376,162 +349,17 @@ class StatisticsServiceImplTest {
         }
     }
 
-    @Test
-    void getEventTypeStatistics() {
-        EventTypeMetrics eventTypeMetrics0 = new EventTypeMetrics(
-                eventType0,
-                ChronoUnit.YEARS.between(EVENT_START_DATE0, NOW_DATE),
-                1,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE0,
-                        EVENT_END_DATE0,
-                        2,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                1,
-                                0
-                        )
-                )
-        );
-        EventTypeMetrics eventTypeMetrics1 = new EventTypeMetrics(
-                eventType1,
-                ChronoUnit.YEARS.between(EVENT_START_DATE1, NOW_DATE),
-                1,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE1,
-                        EVENT_END_DATE1,
-                        1,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                0,
-                                1
-                        )
-                )
-        );
-        EventTypeMetrics eventTypeMetrics2 = new EventTypeMetrics(
-                eventType2,
-                ChronoUnit.YEARS.between(EVENT_START_DATE3, NOW_DATE),
-                3,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE3,
-                        EVENT_END_DATE4,
-                        3,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                0,
-                                0
-                        )
-                )
-        );
-        EventTypeMetrics eventTypeMetrics3 = new EventTypeMetrics(
-                eventType3,
-                ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
-                1,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE5,
-                        EVENT_END_DATE5,
-                        1,
-                        0,
-                        0,
-                        new Metrics(
-                                0,
-                                0,
-                                0
-                        )
-                )
-        );
-        EventTypeMetrics eventTypeMetrics4 = new EventTypeMetrics(
-                eventType4,
-                0,
-                0,
-                new EventTypeEventMetrics(
-                        null,
-                        null,
-                        0,
-                        0,
-                        0,
-                        new Metrics(
-                                0,
-                                0,
-                                0
-                        )
-                )
-        );
-
-        EventTypeStatistics expected0 = createEventTypeStatistics(
-                Collections.emptyList(),
-                new EventType(),
-                null,
-                null,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0, 0, 0
-        );
-        EventTypeStatistics actual0 = statisticsService.getEventTypeStatistics(false, false, null, null);
-        assertEquals(expected0, actual0);
-
-        EventTypeStatistics expected1 = createEventTypeStatistics(
-                List.of(eventTypeMetrics1, eventTypeMetrics3, eventTypeMetrics4),
-                new EventType(),
-                EVENT_START_DATE5,
-                EVENT_END_DATE1,
-                ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
-                2,
-                2,
-                1,
-                1,
-                1, 0, 1
-        );
-        EventTypeStatistics actual1 = statisticsService.getEventTypeStatistics(false, true, null, null);
-        assertEquals(expected1, actual1);
-
-        EventTypeStatistics expected2 = createEventTypeStatistics(
-                List.of(eventTypeMetrics0, eventTypeMetrics2),
-                new EventType(),
-                EVENT_START_DATE0,
-                EVENT_END_DATE4,
-                ChronoUnit.YEARS.between(EVENT_START_DATE0, NOW_DATE),
-                5,
-                4,
-                2,
-                2,
-                2, 1, 0
-        );
-        EventTypeStatistics actual2 = statisticsService.getEventTypeStatistics(true, false, null, null);
-        assertEquals(expected2, actual2);
-
-        EventTypeStatistics expected3 = createEventTypeStatistics(
-                List.of(eventTypeMetrics0, eventTypeMetrics1, eventTypeMetrics2, eventTypeMetrics3, eventTypeMetrics4),
-                new EventType(),
-                EVENT_START_DATE5,
-                EVENT_END_DATE4,
-                ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
-                7,
-                6,
-                3,
-                3,
-                3, 1, 1
-        );
-        EventTypeStatistics actual3 = statisticsService.getEventTypeStatistics(true, true, null, null);
-        assertEquals(expected3, actual3);
-    }
-
-    private EventStatistics createEventStatistics(List<EventMetrics> eventMetricsList, Event event, LocalDate startDate,
-                                                  LocalDate endDate, long duration, long talksQuantity, long speakersQuantity,
-                                                  long companiesQuantity, long javaChampionsQuantity, long mvpsQuantity) {
-        return new EventStatistics(
-                eventMetricsList,
-                new EventMetrics(
-                        event,
+    private EventTypeStatistics createEventTypeStatistics(List<EventTypeMetrics> eventTypeMetricsList,
+                                                          EventType eventType, LocalDate startDate, LocalDate endDate,
+                                                          long age, long duration, long eventsQuantity, long speakersQuantity,
+                                                          long companiesQuantity, long talksQuantity, long javaChampionsQuantity,
+                                                          long mvpsQuantity) {
+        return new EventTypeStatistics(
+                eventTypeMetricsList,
+                new EventTypeMetrics(
+                        eventType,
+                        age,
+                        eventsQuantity,
                         new EventTypeEventMetrics(
                                 startDate,
                                 endDate,
@@ -548,6 +376,164 @@ class StatisticsServiceImplTest {
         );
     }
 
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getEventTypeStatistics method with parameters tests")
+    class GetEventTypeStatisticsTest {
+        private Stream<Arguments> data() {
+            EventTypeMetrics eventTypeMetrics0 = new EventTypeMetrics(
+                    eventType0,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE0, NOW_DATE),
+                    1,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE0,
+                            EVENT_END_DATE0,
+                            2,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    1,
+                                    0
+                            )
+                    )
+            );
+            EventTypeMetrics eventTypeMetrics1 = new EventTypeMetrics(
+                    eventType1,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE1, NOW_DATE),
+                    1,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE1,
+                            EVENT_END_DATE1,
+                            1,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    0,
+                                    1
+                            )
+                    )
+            );
+            EventTypeMetrics eventTypeMetrics2 = new EventTypeMetrics(
+                    eventType2,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE3, NOW_DATE),
+                    3,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE3,
+                            EVENT_END_DATE4,
+                            3,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+            EventTypeMetrics eventTypeMetrics3 = new EventTypeMetrics(
+                    eventType3,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
+                    1,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE5,
+                            EVENT_END_DATE5,
+                            1,
+                            0,
+                            0,
+                            new Metrics(
+                                    0,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+            EventTypeMetrics eventTypeMetrics4 = new EventTypeMetrics(
+                    eventType4,
+                    0,
+                    0,
+                    new EventTypeEventMetrics(
+                            null,
+                            null,
+                            0,
+                            0,
+                            0,
+                            new Metrics(
+                                    0,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+
+            EventTypeStatistics expected0 = createEventTypeStatistics(
+                    Collections.emptyList(),
+                    new EventType(),
+                    null,
+                    null,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0, 0, 0
+            );
+
+            EventTypeStatistics expected1 = createEventTypeStatistics(
+                    List.of(eventTypeMetrics1, eventTypeMetrics3, eventTypeMetrics4),
+                    new EventType(),
+                    EVENT_START_DATE5,
+                    EVENT_END_DATE1,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
+                    2,
+                    2,
+                    1,
+                    1,
+                    1, 0, 1
+            );
+
+            EventTypeStatistics expected2 = createEventTypeStatistics(
+                    List.of(eventTypeMetrics0, eventTypeMetrics2),
+                    new EventType(),
+                    EVENT_START_DATE0,
+                    EVENT_END_DATE4,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE0, NOW_DATE),
+                    5,
+                    4,
+                    2,
+                    2,
+                    2, 1, 0
+            );
+
+            EventTypeStatistics expected3 = createEventTypeStatistics(
+                    List.of(eventTypeMetrics0, eventTypeMetrics1, eventTypeMetrics2, eventTypeMetrics3, eventTypeMetrics4),
+                    new EventType(),
+                    EVENT_START_DATE5,
+                    EVENT_END_DATE4,
+                    ChronoUnit.YEARS.between(EVENT_START_DATE5, NOW_DATE),
+                    7,
+                    6,
+                    3,
+                    3,
+                    3, 1, 1
+            );
+
+            return Stream.of(
+                    arguments(false, false, null, null, expected0),
+                    arguments(false, true, null, null, expected1),
+                    arguments(true, false, null, null, expected2),
+                    arguments(true, true, null, null, expected3)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getEventTypeStatistics(boolean isConferences, boolean isMeetups, Long organizerId, Long topicId,
+                                    EventTypeStatistics expected) {
+            assertEquals(expected, statisticsService.getEventTypeStatistics(isConferences, isMeetups, organizerId, topicId));
+        }
+    }
 
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -597,216 +583,249 @@ class StatisticsServiceImplTest {
         }
     }
 
-    @Test
-    void getEventStatistics() {
-        EventMetrics eventMetrics0 = new EventMetrics(
-                event0,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE0,
-                        EVENT_END_DATE0,
-                        2,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                1,
-                                0
+    private EventStatistics createEventStatistics(List<EventMetrics> eventMetricsList, Event event, LocalDate startDate,
+                                                  LocalDate endDate, long duration, long talksQuantity, long speakersQuantity,
+                                                  long companiesQuantity, long javaChampionsQuantity, long mvpsQuantity) {
+        return new EventStatistics(
+                eventMetricsList,
+                new EventMetrics(
+                        event,
+                        new EventTypeEventMetrics(
+                                startDate,
+                                endDate,
+                                duration,
+                                speakersQuantity,
+                                companiesQuantity,
+                                new Metrics(
+                                        talksQuantity,
+                                        javaChampionsQuantity,
+                                        mvpsQuantity
+                                )
                         )
                 )
         );
-        EventMetrics eventMetrics2 = new EventMetrics(
-                event2,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE2,
-                        EVENT_END_DATE2,
-                        1,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                0,
-                                0
-                        )
-                )
-        );
-        EventMetrics eventMetrics3 = new EventMetrics(
-                event3,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE3,
-                        EVENT_END_DATE3,
-                        1,
-                        0,
-                        0,
-                        new Metrics(
-                                0,
-                                0,
-                                0
-                        )
-                )
-        );
-        EventMetrics eventMetrics4 = new EventMetrics(
-                event4,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE4,
-                        EVENT_END_DATE4,
-                        1,
-                        0,
-                        0,
-                        new Metrics(
-                                0,
-                                0,
-                                0
-                        )
-                )
-        );
-        EventMetrics eventMetrics5 = new EventMetrics(
-                event1,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE1,
-                        EVENT_END_DATE1,
-                        1,
-                        1,
-                        1,
-                        new Metrics(
-                                1,
-                                0,
-                                1
-                        )
-                )
-        );
-        EventMetrics eventMetrics6 = new EventMetrics(
-                event5,
-                new EventTypeEventMetrics(
-                        EVENT_START_DATE5,
-                        EVENT_END_DATE5,
-                        1,
-                        0,
-                        0,
-                        new Metrics(
-                                0,
-                                0,
-                                0
-                        )
-                )
-        );
+    }
 
-        EventStatistics expected0 = createEventStatistics(
-                List.of(eventMetrics0, eventMetrics2, eventMetrics3, eventMetrics4),
-                new Event(),
-                EVENT_START_DATE0,
-                EVENT_END_DATE4,
-                5,
-                2,
-                2,
-                2,
-                1,
-                0
-        );
-        assertEquals(expected0, statisticsService.getEventStatistics(true, false, null, null));
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getEventStatistics method with parameters tests")
+    class GetEventStatisticsTest {
+        private Stream<Arguments> data() {
+            EventMetrics eventMetrics0 = new EventMetrics(
+                    event0,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE0,
+                            EVENT_END_DATE0,
+                            2,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    1,
+                                    0
+                            )
+                    )
+            );
+            EventMetrics eventMetrics2 = new EventMetrics(
+                    event2,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE2,
+                            EVENT_END_DATE2,
+                            1,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+            EventMetrics eventMetrics3 = new EventMetrics(
+                    event3,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE3,
+                            EVENT_END_DATE3,
+                            1,
+                            0,
+                            0,
+                            new Metrics(
+                                    0,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+            EventMetrics eventMetrics4 = new EventMetrics(
+                    event4,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE4,
+                            EVENT_END_DATE4,
+                            1,
+                            0,
+                            0,
+                            new Metrics(
+                                    0,
+                                    0,
+                                    0
+                            )
+                    )
+            );
+            EventMetrics eventMetrics5 = new EventMetrics(
+                    event1,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE1,
+                            EVENT_END_DATE1,
+                            1,
+                            1,
+                            1,
+                            new Metrics(
+                                    1,
+                                    0,
+                                    1
+                            )
+                    )
+            );
+            EventMetrics eventMetrics6 = new EventMetrics(
+                    event5,
+                    new EventTypeEventMetrics(
+                            EVENT_START_DATE5,
+                            EVENT_END_DATE5,
+                            1,
+                            0,
+                            0,
+                            new Metrics(
+                                    0,
+                                    0,
+                                    0
+                            )
+                    )
+            );
 
-        EventStatistics expected1 = createEventStatistics(
-                List.of(eventMetrics0),
-                new Event(),
-                EVENT_START_DATE0,
-                EVENT_END_DATE0,
-                2,
-                1,
-                1,
-                1,
-                1,
-                0
-        );
-        assertEquals(expected1, statisticsService.getEventStatistics(true, false, null, 0L));
+            EventStatistics expected0 = createEventStatistics(
+                    List.of(eventMetrics0, eventMetrics2, eventMetrics3, eventMetrics4),
+                    new Event(),
+                    EVENT_START_DATE0,
+                    EVENT_END_DATE4,
+                    5,
+                    2,
+                    2,
+                    2,
+                    1,
+                    0
+            );
 
-        EventStatistics actual2 = statisticsService.getEventStatistics(true, false, null, 1L);
-        EventStatistics expected2 = createEventStatistics(
-                Collections.emptyList(),
-                new Event(),
-                null,
-                null,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0
-        );
-        assertEquals(expected2, actual2);
+            EventStatistics expected1 = createEventStatistics(
+                    List.of(eventMetrics0),
+                    new Event(),
+                    EVENT_START_DATE0,
+                    EVENT_END_DATE0,
+                    2,
+                    1,
+                    1,
+                    1,
+                    1,
+                    0
+            );
 
-        EventStatistics actual3 = statisticsService.getEventStatistics(true, false, null, 2L);
-        EventStatistics expected3 = createEventStatistics(
-                List.of(eventMetrics2, eventMetrics3, eventMetrics4),
-                new Event(),
-                EVENT_START_DATE3,
-                EVENT_END_DATE4,
-                3,
-                1,
-                1,
-                1,
-                0,
-                0
-        );
-        assertEquals(expected3, actual3);
+            EventStatistics expected2 = createEventStatistics(
+                    Collections.emptyList(),
+                    new Event(),
+                    null,
+                    null,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0
+            );
 
-        EventStatistics actual4 = statisticsService.getEventStatistics(true, false, null, 3L);
-        EventStatistics expected4 = createEventStatistics(
-                Collections.emptyList(),
-                new Event(),
-                null,
-                null,
-                0,
-                0,
-                0,
-                0,
-                0,
-                0
-        );
-        assertEquals(expected4, actual4);
+            EventStatistics expected3 = createEventStatistics(
+                    List.of(eventMetrics2, eventMetrics3, eventMetrics4),
+                    new Event(),
+                    EVENT_START_DATE3,
+                    EVENT_END_DATE4,
+                    3,
+                    1,
+                    1,
+                    1,
+                    0,
+                    0
+            );
 
-        EventStatistics expected5 = createEventStatistics(
-                List.of(eventMetrics5, eventMetrics6),
-                new Event(),
-                EVENT_START_DATE5,
-                EVENT_END_DATE1,
-                2,
-                1,
-                1,
-                1,
-                0,
-                1
-        );
+            EventStatistics expected4 = createEventStatistics(
+                    Collections.emptyList(),
+                    new Event(),
+                    null,
+                    null,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0,
+                    0
+            );
 
-        EventStatistics expected6 = createEventStatistics(
-                List.of(eventMetrics0, eventMetrics5, eventMetrics2, eventMetrics3, eventMetrics4, eventMetrics6),
-                new Event(),
-                EVENT_START_DATE5,
-                EVENT_END_DATE4,
-                7,
-                3,
-                3,
-                3,
-                1,
-                1
-        );
+            EventStatistics expected5 = createEventStatistics(
+                    List.of(eventMetrics5, eventMetrics6),
+                    new Event(),
+                    EVENT_START_DATE5,
+                    EVENT_END_DATE1,
+                    2,
+                    1,
+                    1,
+                    1,
+                    0,
+                    1
+            );
 
-        assertEquals(expected1, statisticsService.getEventStatistics(true, false, 0L, null));
-        assertEquals(expected3, statisticsService.getEventStatistics(true, false, 1L, null));
+            EventStatistics expected6 = createEventStatistics(
+                    List.of(eventMetrics0, eventMetrics5, eventMetrics2, eventMetrics3, eventMetrics4, eventMetrics6),
+                    new Event(),
+                    EVENT_START_DATE5,
+                    EVENT_END_DATE4,
+                    7,
+                    3,
+                    3,
+                    3,
+                    1,
+                    1
+            );
 
-        assertEquals(expected1, statisticsService.getEventStatistics(true, false, 0L, 0L));
-        assertEquals(expected2, statisticsService.getEventStatistics(true, false, 1L, 0L));
+            return Stream.of(
+                    arguments(true, false, null, null, expected0),
+                    arguments(true, false, null, 0L, expected1),
+                    arguments(true, false, null, 1L, expected2),
+                    arguments(true, false, null, 2L, expected3),
+                    arguments(true, false, null, 3L, expected4),
 
-        assertEquals(expected2, statisticsService.getEventStatistics(true, false, 0L, 1L));
-        assertEquals(expected2, statisticsService.getEventStatistics(true, false, 1L, 1L));
+                    arguments(true, false, 0L, null, expected1),
+                    arguments(true, false, 1L, null, expected3),
 
-        assertEquals(expected2, statisticsService.getEventStatistics(true, false, 0L, 2L));
-        assertEquals(expected3, statisticsService.getEventStatistics(true, false, 1L, 2L));
+                    arguments(true, false, 0L, 0L, expected1),
+                    arguments(true, false, 1L, 0L, expected2),
 
-        assertEquals(expected4, statisticsService.getEventStatistics(true, false, 0L, 3L));
-        assertEquals(expected4, statisticsService.getEventStatistics(true, false, 1L, 3L));
+                    arguments(true, false, 0L, 1L, expected2),
+                    arguments(true, false, 1L, 1L, expected2),
 
-        assertEquals(expected4, statisticsService.getEventStatistics(false, false, null, null));
-        assertEquals(expected5, statisticsService.getEventStatistics(false, true, null, null));
-        assertEquals(expected6, statisticsService.getEventStatistics(true, true, null, null));
+                    arguments(true, false, 0L, 2L, expected2),
+                    arguments(true, false, 1L, 2L, expected3),
+
+                    arguments(true, false, 0L, 3L, expected4),
+                    arguments(true, false, 1L, 3L, expected4),
+
+                    arguments(false, false, null, null, expected4),
+                    arguments(false, true, null, null, expected5),
+                    arguments(true, true, null, null, expected6)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getEventStatistics(boolean isConferences, boolean isMeetups, Long organizerId, Long eventTypeId, EventStatistics expected) {
+            assertEquals(expected, statisticsService.getEventStatistics(isConferences, isMeetups, organizerId, eventTypeId));
+        }
     }
 
     private SpeakerStatistics createSpeakerStatistics(List<SpeakerMetrics> speakerMetricsList, Speaker speaker,
